# foolhammer-mod-manager

./: .gitignore  PKGBUILD  README.md  eslint.config.mjs  nuxt.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: flatpak.yaml  release.yaml  tauri-build.yaml
flatpak/: com.tpkee.foolhammer-mod-manager.yml
i18n/locales/: en.json
src/: app.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  events.rs  lib.rs  state.rs  state_b.rs  supported_games.rs
src-tauri/src/commands/: game.rs  games.rs  groups.rs  helpers.rs  mod.rs  mods.rs  profile.rs  profiles.rs  settings.rs
src-tauri/src/defaults/: games.rs  mod.rs  system.rs
src-tauri/src/dto/: games.rs  groups.rs  mod.rs  mods.rs  packs.rs  profiles.rs  saves.rs  settings.rs
src-tauri/src/launchers/: linux.rs  mod.rs  windows.rs
src-tauri/src/mods/: helpers.rs  mod.rs  pack.rs  sort.rs  writer.rs
src-tauri/src/state/: app_state.rs  mod.rs  user_settings.rs
src-tauri/src/stores/: games.rs  mod.rs  settings.rs
src-tauri/src/utils/: custom_macro.rs  folder_watcher.rs  game_launcher.rs  macros.rs  mod.rs  mods.rs  path.rs  steam.rs  steam_client.rs  umu_manager.rs
src/components/: AppAccordion.vue  AppBreadcrump.vue  AppButton.vue  AppCheckbox.vue  AppDropdown.vue  AppInput.vue  AppModal.vue  AppOptions.vue  AppRadio.vue  AppSelect.vue  AppSidebar.vue  AppTooltip.vue  ItemGroup.vue  ItemMod.vue  ItemOption.vue  ItemProfile.vue  ListMods.vue  ListProfiles.vue  ModalAddGroupToProfiles.vue  ModalCreateGroup.vue  ModalCreateProfile.vue  ModalGame.vue  ModalListProfiles.vue  ModalMergeProfile.vue  ModalMod.vue  ModalPreferences.vue  ModalProfile.vue  ModalProfileGroups.vue  ModalRenameGroup.vue  ModalRenameMod.vue  ModalRenameProfile.vue  ModsEditBar.vue  ProfileMergeSelector.vue  SidebarButton.vue  SidebarContinue.vue  SidebarGame.vue  SidebarPlay.vue  SidebarProfile.vue  TableGroups.vue  TableMods.vue  (+1 more)
src/composables/: gameImage.ts  invoke.ts  useCurrentGame.ts  useFloatingPosition.ts  useHistory.ts  useModErrors.ts  useMultiDrag.ts
src/pages/: groups.vue  index.vue  profiles.vue
src/schemas/: games.ts  groups.ts  index.ts  mods.ts  packs.ts  profiles.ts  saves.ts  settings.ts
src/stores/: game.ts  preferences.ts  settings.ts
src/types/: GameMeta.d.ts  GameRunnerStatus.d.ts  ModError.d.ts  ModMeta.d.ts  userSettings.d.ts
src/utils/: sort.ts
(+45 files in other folders)
