[package]
name = "modhammer_manager"
version = "0.1.0"
description = "A mod manager for total war warhammer 3"
authors = ["tpkee"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "8.2.0"
tauri-plugin-store = "2.4.2"
dirs = "6.0"
lazy_static = "1.5.0"
