[package]
name = "foolhamer-mod-manager"
version = "0.1.0"
description = "A mod manager for total war warhammer 3"
authors = ["tpkee"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "8.2.0"
tauri-plugin-store = "2.4.2"
dirs = "6.0"
lazy_static = "1.5.0"
steamworks = "0.12.2"
steamlocate = "2.0.1"
rpfm_lib = "4.7.4"
chrono = "0.4.43"
tauri-plugin-dialog = "2"
