[package]
name = "foolhammer-mod-manager"
version = "0.1.0"
description = "A mod manager for Total War: Warhammer 3"
authors = ["tpkee"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
tauri = { version = "2.11.2", features = ["protocol-asset"] }
tauri-plugin-opener = "2.5.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.150"
notify = "8.2.0"
tauri-plugin-store = "2.4.2"
dirs = "6.0"
lazy_static = "1.5.0"
steamworks = "0.13.1"
steamlocate = "2.0.1"
rpfm_lib = "4.7.4"
chrono = "0.4"
tauri-plugin-dialog = "2.7.1"
ureq = { version = "3.2.0", features = ["json"] }
tar = "0.4.46"
sysinfo = { version = "0.39.2", features = []   }
uuid = { version = "1", features = ["v4"] }
tauri-plugin-log = "2"
log = "0.4"
